--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <h1>Weather Dashboard</h1>
             </header>
             <section id="search-section">
-                <input type="text" id="city-input" placeholder="Enter city name">
-                <button id="search-btn">Search</button>
+                <input type="text" id="city" placeholder="Enter city name">
+                <button id="search">Search</button>
             </section>
         </div>
     </div>
